# sol-unified

./: .gitignore  CLAUDE.md  Info.plist  LICENSE  Package.swift  README.md  SolUnified-v1.0.dmg  SolUnified.entitlements  activity_queries.sql  ai_context.json  build.sh  create-dmg.sh  package.sh  run.sh  simulate_activity.py  sol-context  sol-unified-spec.json  test_memory.py  verify_structure.sh
SolUnified/App/: AppDelegate.swift  SolUnifiedApp.swift
SolUnified/Core/: Database.swift  HotkeyManager.swift  WindowManager.swift
SolUnified/Resources/: AppIcon.icns
SolUnified/Shared/: BrutalistStyles.swift  Models.swift  Settings.swift  TabNavigator.swift
agent/: __init__.py
agent/routing/: README.md  __init__.py  classifiers.py  config.py  example.py  intents.py  memory.py  memory_v2.py  requirements.txt  router.py
agent/sdk/: __init__.py  config.py  main.py  pyproject.toml
agent/sdk/daemon/: __init__.py  scheduler.py
agent/sdk/prompts/: __init__.py  meeting_brief.py  system.py
agent/sdk/tools/: __init__.py  actions.py  calendar.py  context.py  people.py
agent/sdk/workflows/: __init__.py  meeting_prep.py
docs/: CHANGELOG-v1.4.md  CHANGELOG.json  DISTRIBUTION.md  MABLE_PROBLEM_SPACE.md  Mable-Plan.md  Mable.md  QUICK_START.md  SOL plan.md  activity-timeline-design.md  agent-harness-best-practices.md  sytem-logging.md
screenshot-organizer/: .gitignore  CRON_SETUP.md  README.md
screenshot-organizer/backend/: BACKEND_FIX.md  main.py  migrate_db.py  requirements.txt  run.sh  start-backend.sh  trigger_scan.py  trigger_scan.sh
site/: sol.html
(+71 files in other folders)
